--- a/views/blog.jade
+++ b/views/blog.jade
@@ -3,6 +3,8 @@ html
   head
     link(rel='stylesheet', href='/stylesheets/blog.css')
   body
+    #home
+      a(href='/') WR
     #wrapper
       if articles
         each article in articles
