commented out google-tag-manager

--- a/views/blog.jade
+++ b/views/blog.jade
@@ -8,7 +8,7 @@ html
       link(href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css')
       link(rel='stylesheet', href='/bower_components/highlightjs/styles/github.css')
   body
-    include extras/google-tag-man.html
+    //-include extras/google-tag-man.html
 
     #home
       a(href='/') WR
