--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ html(lang='en')
     link(rel='stylesheet', href='/stylesheets/styles.css')
 
   body
-    include extras/google-tag-man.html
+    //-include extras/google-tag-man.html
 
     block content
 
