--- a/views/blog.jade
+++ b/views/blog.jade
@@ -39,3 +39,5 @@ html
         script(src='/bower_components/highlightjs/highlight.pack.min.js')
         script.
           hljs.initHighlightingOnLoad()
+
+    include extras/google-analytics.html
