added description, and blog titles, added article layout extending from blog

--- a/views/blog.jade
+++ b/views/blog.jade
@@ -5,16 +5,16 @@ html
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,700,900', rel='stylesheet', type='text/css')
 
     if title
-      link(href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css')
+      title= title
       link(rel='stylesheet', href='/bower_components/highlightjs/styles/github.css')
-  body
-    //-include extras/google-tag-man.html
+    else
+      title Wahid's blog
 
-    #home
-      a(href='/') WR
-    #wrapper
-      if articles
-        // link to all articles
+  body
+    if articles
+      #home
+        a(href='/') WR
+      #wrapper
         each article in articles
           .article
             a(href='blog/article/' + article.url)
@@ -24,20 +24,8 @@ html
               ul.tags
                 each tag in article.tags
                   li.tag= tag
-
-      else if title
-        // render single article
-        a(href='/blog') back to articles
-
-        h1.title= title
-        span= date
-        .body!= body
-
-        #disqus
-          include extras/disqus.html
-
-        script(src='/bower_components/highlightjs/highlight.pack.min.js')
-        script.
-          hljs.initHighlightingOnLoad()
+    else if title
+      #wrapper
+        block content
 
     include extras/google-analytics.html
