--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
     title= title
+    meta(name='description', content='Check out what I have been working on!')
 
     link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
     link(href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,900', rel='stylesheet', type='text/css')
