new blog style and article

--- a/views/blog.jade
+++ b/views/blog.jade
@@ -6,7 +6,9 @@ html
 
     if title
       title= title
-      link(rel='stylesheet', href='/bower_components/highlightjs/styles/github.css')
+      link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css')
+      link(href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,500' rel='stylesheet' type='text/css')
+      link(rel='stylesheet', href='/bower_components/highlightjs/styles/monokai-sublime.css')
     else
       title Wahid's blog
 
