--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,5 +1,3 @@
-/*@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,900);*/
-
 body {
   padding: 50px;
   font-family: 'Roboto', Arial, sans-serif;
@@ -24,7 +22,7 @@ a:hover {
 
 #wrapper,
 #disqus {
-  width: 720px;
+  width: 960px;
   margin: 0 auto;
 }
 
@@ -55,13 +53,34 @@ a:hover {
 .body {
   margin-top: 50px;
   font-size: 1.5em;
-  font-weight: 300;
+  line-height: 1.5;
 }
 
 code {
-  font: 0.8em monaco;
+  font-family: 'roboto mono';
 }
 
+.body p {
+  text-align: justify;
+}
+.body p,
+.body li {
+  width: 700px;
+  margin: 0 auto;
+  font-family: 'roboto slab', serif;
+  font-weight: lighter;
+}
+.body p code,
+.body li code {
+  color: #ff00ff;
+  white-space: nowrap;
+}
+#wrapper h1 {
+  font-size: 56px;
+}
+#disqus {
+  margin-top: 100px;
+}
 #fail, #fix {font-weight: bold;}
 #fail {color: red;}
 #fix {color: green;}
