--- a/views/index/portfolio.jade
+++ b/views/index/portfolio.jade
@@ -37,7 +37,8 @@
 
   .item
     img.img-responsive(src='http://i.imgur.com/uHPveze.jpg')
-    h3 mean-todo-app
+    a(href='https://todo-mean-app.herokuapp.com/', target='_blank')
+      h3 todo-mean-app
     .stack
       i MongoDB, Express.js, Angular.js, Node.js
     .desc
