code font family addition

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -57,7 +57,7 @@ a:hover {
 }
 
 code {
-  font-family: 'roboto mono';
+  font-family: 'roboto mono', 'monaco', 'consolas', monospace;
 }
 
 .body p {
