--- a/views/index/portfolio.jade
+++ b/views/index/portfolio.jade
@@ -71,6 +71,16 @@
       | https://github.com/wahidrahim/breakout-arcade
 
   .item
+    img.img-responsive(src='http://i.imgur.com/Yyr4R9p.png')
+    a(href='https://contactslist-js.herokuapp.com/', target='_blank')
+      h3 contacts-list.js
+    .stack
+      i JavaScript, jQuery, HTML, CSS
+    .desc
+      | A mini Contacts-list application, using JavaScript and jQuery.
+    a.source(href='https://github.com/wahidrahim/contactslist.js', target='_blank')
+      | https://github.com/wahidrahim/contactslist.js
+  .item
     video.img-responsive(loop)
       source(src='https://fat.gfycat.com/JealousBestEmperorpenguin.mp4', type='video/mp4')
       source(src='https://zippy.gfycat.com/JealousBestEmperorpenguin.webm', type'video/webm')
