--- a/views/index/portfolio.jade
+++ b/views/index/portfolio.jade
@@ -1,5 +1,18 @@
 #portfolio
   .item
+    img.img-responsive(src='http://i.imgur.com/sR08sr6.png')
+    a(href='http://wifiplz.herokuapp.com/', target='_blank')
+      h3 wifiPlz
+    .stack
+      i MongoDB, Express.js, Angular.js, Node.js
+    .desc
+      | Find places with wifi near your location! A MEAN application using
+      | pseudo data featuring geolocation, REST api, along with some custom
+      | angular services and directives.
+    a.source(href='https://github.com/wahidrahim/wifiPlz', target='_blank')
+      | https://github.com/wahidrahim/wifiPlz
+
+  .item
     video.img-responsive(loop)
       source(src='https://zippy.gfycat.com/TerribleOptimalBlackbuck.webm', type='video/webm')
       source(src='https://zippy.gfycat.com/TerribleOptimalBlackbuck.mp4', type='video/mp4')
